# llxprt-jefe

./: .coderabbit.yaml  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs  clippy-allowlist.tsv  clippy.toml
.code_puppy/: AGENTS.md
.config/jefe-dev/: state.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/clippy/: clippy.toml
.github/workflows/: ci.yml  ocr-review.yml  release.yml
.jefe/: clippy-fix-msg.txt  comment-pagination-issue.md  issue-prompt.md  issue273-msg.txt  merge2-msg.txt  ocr-batch2-comment.md  ocr-triage.md  pr-body-236.md  pr-body-245.md  pr-body-273.md  pr-body.md  review-fixes-msg.txt  size-fix-msg.txt
.llxprt/: LLXPRT.md
dev-docs/: COORDINATING.md  PLAN.md  README.md  RULES.md  code-review-demand.md  project-standards.md  tmux-harness.md
dev-docs/standards/: architecture.md  coding-standards.md  display-and-ui.md  persistence-and-runtime.md  testing-and-quality.md
dev-docs/testing/: psmux-smoke.md  tmux-harness.md  tutorial-capture.md
dev-docs/tmux-scenarios/: actions-mode.json  actions-pr-filter.json  agent-runtime-choice.json  agent-shell-overlay.json  auth-dialog.json  code-puppy-chord-passthrough.json  code-puppy-version-fields.json  confirm-dialog-focus.json  (+46 more)
docs/: building.md  getting-started.md  overview.md  project-standards.md  technical-overview.md
project-plans/: issue164-plan.md  issue175-plan.md  issue184-plan.md  issue188-plan.md  issue190-plan.md  issue194-plan.md  issue197-plan.md  issue198-plan.md  issue202-plan.md  issue204-plan.md  issue205-plan.md  issue206-plan.md  issue208-plan.md  issue213-plan.md  issue214-plan.md  issue222-plan.md  issue230-plan.md  issue241-plan.md  issue245-plan.md  issue259-plan.md  issue260-plan.md  issue261-plan.md  issue262-plan.md  issue263-plan.md  issue265-plan.md  issue269-plan.md  issue270-plan.md  issue273-plan.md  issue287-plan.md  issue292-plan.md  issue301-plan.md  issue305-plan.md  issue311-plan.md  issue313-plan.md  issue314-plan.md  issue315-plan.md  issue316-plan.md  issue317-plan.md  issue323-plan.md  issue331-plan.md  (+16 more)
scripts/: check-architecture.sh  check-clippy-allows.sh  check-source-file-size.sh  first-agent-tutorial-gh-shim.sh  issue194-gh-shim.sh  issue194-run-scenario.sh  issue222-run-scenario.sh  issue230-gh-shim-fixtures.sh  issue230-gh-shim.sh  issue230-run-scenario.sh  issue230-shim-selftest.sh  issue238-gh-shim.sh  issue238-run-scenario.sh  issue241-capture.sh  issue265-gh-shim-fixtures.sh  issue265-gh-shim.sh  issue265-run-scenario.sh  issue265-shim-selftest.sh  issue269-run-scenario.sh  issue351-gh-shim.sh  issue351-run-scenario.sh  issue361-manager-run-scenario.sh  issue364-manager-run-scenario.sh  regenerate-first-agent-tutorial.sh  validate-newissue-wrap.sh
src/: actions_detail_projection.rs  actions_detail_view.rs  actions_view.rs  agent_detection.rs  agent_detection_tests.rs  app_init.rs  app_init_process_binding.rs  app_init_shell_reconcile.rs  app_input.rs  app_shell.rs  app_shell_attach.rs  app_shell_key_routing.rs  app_shell_workers.rs  cli.rs  clipboard.rs  dashboard_git_info.rs  detail_wrap_map.rs  input.rs  input_tests.rs  issue_detail_content.rs  layout.rs  layout_tests.rs  lib.rs  list_viewport.rs  list_viewport_tests.rs  local_command.rs  logging.rs  main.rs  main_tests.rs  markdown_html_strip.rs  markdown_html_strip_tests.rs  markdown_render.rs  markdown_render_cache_tests.rs  markdown_render_depth_tests.rs  markdown_render_tests.rs  messages.rs  mouse_routing.rs  mouse_routing_banner_tests.rs  mouse_routing_detail.rs  mouse_routing_tests.rs  (+11 more)
tests/: actions_view.rs  agent_detection.rs  cli.rs  coderabbit_policy.rs  domain_issues.rs  first_agent_tutorial_gh_shim.rs  first_agent_tutorial_regeneration.rs  git_info.rs  github_client.rs  github_unit.rs  harness_v1.rs  harness_v1_fixtures.rs  identity.rs  integration.rs  issue208_behavior.rs  issue241_capture.rs  issue269_behavior.rs  issue270_behavior.rs  issue317_behavior.rs  issue_rewrite.rs  layout.rs  list_viewport.rs  markdown_html_strip.rs  markdown_render.rs  pagination.rs  psmux_attach.rs  psmux_smoke.rs  tutorial_capture_artifacts.rs
tools/jefe-tutorial-capture/: Cargo.toml
tools/jefe-tutorial-capture/src/: lib.rs  main.rs
tools/jefe-tutorial-capture/src/cli_cmd/: capture_flow.rs  cleanup_cmd.rs  cli.rs  cli_parsing_tests.rs  cli_subcommand_tests.rs  commands.rs  mod.rs  plan_github.rs  status_suppress_hook_tests.rs  svg_helpers.rs  tmux_helpers.rs  tmux_request_tests.rs
tools/jefe-tutorial-capture/src/tutorial_capture/: ansi_svg.rs  ansi_svg_tests.rs  github_cleanup.rs  github_cleanup_tests.rs  github_executor.rs  github_executor_exact_tests.rs  github_executor_tests.rs  manifest.rs  manifest_tests.rs  mod.rs  orchestration.rs  orchestration_tests.rs  path_shim.rs  path_shim_tests.rs  persistence_sentinel_tests.rs  persistence_tests.rs  provenance.rs  redaction.rs  report.rs  scenario_gen.rs  scenario_gen_tests.rs  state_seed.rs  svg_render.rs  validate_runtime.rs  validate_runtime_tests.rs
tools/jefe-tutorial-capture/src/tutorial_capture/persistence/: atomic_io.rs  cleanup.rs  containment.rs  dto.rs  error.rs  mod.rs  run_root.rs
tools/jefe-tutorial-capture/tests/: runtime_validation.rs  tutorial_capture_artifacts.rs  tutorial_capture_contracts.rs  tutorial_capture_fatal_saves.rs  tutorial_capture_scenario_artifacts.rs  tutorial_capture_tier_b_contracts.rs
toy1/: Cargo.toml  DATA_LAYER_README.md  clippy.toml  rustfmt.toml
toy1/.cargo/: config.toml
toy1/src/: app.rs  main.rs
toy1/src/data/: mock.rs  mod.rs  models.rs
toy1/src/events/: bus.rs  mod.rs
toy1/src/presenter/: format.rs  mod.rs
toy1/src/pty/: mod.rs
toy1/src/theme/: definition.rs  loader.rs  manager.rs  mod.rs
toy1/src/ui/: mod.rs
toy1/src/ui/components/: agent_list.rs  keybind_bar.rs  mod.rs  preview.rs  sidebar.rs  status_bar.rs  terminal_view.rs
toy1/src/ui/modals/: confirm.rs  help.rs  mod.rs
toy1/src/ui/screens/: agent_detail.rs  dashboard.rs  mod.rs  new_agent.rs  new_repository.rs  split.rs
toy1/themes/: default-dark.json  dracula.json  green-screen.json
(+790 files in other folders)
