[package]
name = "jefe"
version = "0.0.29"
edition = "2024"
authors = ["Vybestack LLC"]
description = "Terminal application for managing multiple llxprt coding agents"
license = "Apache-2.0"
repository = "https://github.com/vybestack/jefe"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Terminal UI
iocraft = "0.5"
crossterm = "0.28"
# Layout + width measurement for the low-level terminal canvas component.
# Versions are pinned to those iocraft already resolves so the `taffy::Style`
# type unifies with iocraft's internal layout engine.
taffy = "0.5"
unicode-width = "0.2"

# Terminal/PTY
portable-pty = "0.8"
alacritty_terminal = "0.24"

# Async
smol = "2.0"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Directories (for platform-specific paths)
dirs = "6.0"

# Bounded cache for dead-session signatures (prevents unbounded memory growth
# from repeated kill/recreate cycles of different agents).
lru = "0.12"

# Markdown parsing for the PR/Issue detail body rendering (issue #155).
# comrak is the maintained Rust cmark-gfm successor (BSD-2-Clause, permissive).
# A thin renderer walks its AST into jefe text lines; iocraft has no markdown
# support and ratatui-markdown produces ratatui-specific types that do not fit
# jefe's iocraft pipeline.
comrak = { version = "0.53", default-features = false }

[target.'cfg(windows)'.dependencies]
winsafe = { version = "0.0.27", features = ["kernel"] }
whoami = "=2.1.2"

[features]
psmux-smoke = []

[[bin]]
name = "jefe-psmux-smoke-fixture"
path = "tests/fixtures/psmux_smoke_fixture.rs"
required-features = ["psmux-smoke"]

[patch.crates-io]
iocraft = { path = "vendor/iocraft" }

[dev-dependencies]
tempfile = "3.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
print_stdout = "warn"
print_stderr = "warn"
todo = "deny"
unimplemented = "deny"
# Relaxed for stub phase - will tighten in impl phases
needless_pass_by_value = "allow"
redundant_clone = "allow"
doc_markdown = "allow"
missing_const_for_fn = "allow"
missing_errors_doc = "allow"
option_if_let_else = "allow"

[profile.release]
lto = true
strip = true
